# scratch_ml

./: .gitignore  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
CMPT459_Assignment1_CodeTemplate_and_Data/: EDA.ipynb  decision_tree.py  main.py  report.ipynb  report.tex
CMPT459_Assignment1_CodeTemplate_and_Data/data/: test.csv
CMPT459_Assignment1_CodeTemplate_and_Data/submission/: decision_tree.py  node.py
CMPT459_Assignment2_CodeTemplate/: debug_notebook.ipynb  kmeans.py  main.py  report_notebook.ipynb
