[project]
name = "scratch-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anndata>=0.11.4",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "nbconvert>=7.16.6",
    "notebook>=7.4.7",
    "pandas>=2.3.2",
    "pip>=25.2",
    "scanpy>=1.11.5",
]
